# asic-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.j2  README.md  build.rs  cliff.toml  pyproject.toml  zensical.toml
.github/workflows/: github-pages.yml  pr-fmt.yml  readme.yml  release-python.yml  release.yml  test.yml
asic-rs-core/: Cargo.toml
asic-rs-core/src/: discovery.rs  errors.rs  lib.rs  util.rs
asic-rs-core/src/config/: collector.rs  fan.rs  mod.rs  pools.rs  scaling.rs  tuning.rs
asic-rs-core/src/data/: board.rs  collector.rs  command.rs  device.rs  fan.rs  firmware.rs  hashrate.rs  message.rs  miner.rs  mod.rs  pool.rs
asic-rs-core/src/test/: api.rs  util.rs
asic-rs-core/src/traits/: discovery.rs  entry.rs  firmware.rs  identification.rs  make.rs  miner.rs  mod.rs  model.rs
asic-rs-derive/: Cargo.toml
asic-rs-derive/src/: lib.rs
asic-rs-firmwares/antminer/: Cargo.toml
asic-rs-firmwares/antminer/src/: firmware.rs
asic-rs-firmwares/antminer/src/backends/: mod.rs
asic-rs-firmwares/auradine/: Cargo.toml
asic-rs-firmwares/avalonminer/: Cargo.toml
asic-rs-firmwares/avalonminer/src/: firmware.rs  lib.rs
asic-rs-firmwares/avalonminer/src/backends/: mod.rs  rpc.rs
asic-rs-firmwares/bitaxe/: Cargo.toml
asic-rs-firmwares/bitaxe/src/: firmware.rs
asic-rs-firmwares/bitaxe/src/backends/: mod.rs
asic-rs-firmwares/braiins/: Cargo.toml
asic-rs-firmwares/braiins/src/: firmware.rs
asic-rs-firmwares/braiins/src/backends/: config.rs  mod.rs  util.rs
asic-rs-firmwares/epic/: Cargo.toml
asic-rs-firmwares/epic/src/: firmware.rs
asic-rs-firmwares/epic/src/backends/: mod.rs
asic-rs-firmwares/futurebit/: Cargo.toml
asic-rs-firmwares/futurebit/src/: firmware.rs
asic-rs-firmwares/futurebit/src/backends/: mod.rs
asic-rs-firmwares/futurebit/src/backends/v2/: mod.rs  web.rs
asic-rs-firmwares/luxminer/: Cargo.toml
asic-rs-firmwares/luxminer/src/: firmware.rs
asic-rs-firmwares/luxminer/src/backends/: mod.rs
asic-rs-firmwares/marathon/: Cargo.toml
asic-rs-firmwares/marathon/src/: firmware.rs
asic-rs-firmwares/marathon/src/backends/: mod.rs
asic-rs-firmwares/nerdaxe/: Cargo.toml
asic-rs-firmwares/nerdaxe/src/: firmware.rs
asic-rs-firmwares/nerdaxe/src/backends/: mod.rs
asic-rs-firmwares/proto/: Cargo.toml
asic-rs-firmwares/proto/src/: firmware.rs  lib.rs
asic-rs-firmwares/proto/src/backends/: mod.rs
asic-rs-firmwares/proto/src/backends/v1/: mod.rs  web.rs
asic-rs-firmwares/proto/src/test/json/v1/: cooling.json  hardware.json  mining.json  mod.rs  network.json  pools.json  system.json  telemetry_full.json
asic-rs-firmwares/sealminer/: Cargo.toml
asic-rs-firmwares/sealminer/src/: firmware.rs  lib.rs
asic-rs-firmwares/sealminer/src/backends/: mod.rs
asic-rs-firmwares/vnish/: Cargo.toml
asic-rs-firmwares/vnish/src/: firmware.rs
asic-rs-firmwares/vnish/src/backends/: mod.rs
asic-rs-firmwares/whatsminer/: Cargo.toml
asic-rs-firmwares/whatsminer/src/: error_codes.rs  firmware.rs
asic-rs-firmwares/whatsminer/src/backends/: mod.rs
asic-rs-makes/antminer/: Cargo.toml
asic-rs-makes/antminer/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/auradine/: Cargo.toml
asic-rs-makes/auradine/src/: hardware.rs  models.rs
asic-rs-makes/avalon/: Cargo.toml
asic-rs-makes/avalon/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/bitaxe/: Cargo.toml
asic-rs-makes/bitaxe/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/braiins/: Cargo.toml
asic-rs-makes/braiins/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/epic/: Cargo.toml
asic-rs-makes/epic/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/futurebit/: Cargo.toml
asic-rs-makes/futurebit/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/marathon/: Cargo.toml
asic-rs-makes/marathon/src/: hardware.rs
asic-rs-makes/nerdaxe/: Cargo.toml
asic-rs-makes/nerdaxe/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/proto/: Cargo.toml
asic-rs-makes/proto/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/sealminer/: Cargo.toml
asic-rs-makes/sealminer/src/: hardware.rs  make.rs  models.rs
asic-rs-makes/whatsminer/: Cargo.toml
asic-rs-makes/whatsminer/src/: hardware.rs  make.rs  models.rs
asic-rs-pydantic/: Cargo.toml
asic-rs-pydantic-macros/: Cargo.toml
asic-rs-pydantic-macros/src/: lib.rs
asic-rs-pydantic-macros/tests/ui/pass/: pydantic_model.rs
asic-rs-pydantic/src/: lib.rs
docs/: api.md  getting-started.md  index.md  supported-devices.md
docs-shared/: guide.md
docs/development/: documentation.md
docs/js/: theme-logo.js
docs/stylesheets/: extra.css
meta/braiins/21.09/: schema.graphql
meta/epic/1.22.5/: powerplay.json
meta/epic/1.30.0/: powerplay.json
meta/futurebit/v2/: schema.graphql
meta/proto/1.0.0/: MDK-API.json
meta/vnish/v1.2.6/: api-doc.json
pyasic_rs/: __init__.py  data.py  miner.py
python/: README.md
python/pyasic_rs/: __init__.py  asic_rs.pyi  config.py  data.py  factory.py  miner.py
python/tests/: test_pydantic_interop.py
scripts/: braiins-get-proto.sh  bump-version.sh  generate_supported_devices.py  run_python_tests.py
scripts/docs/: gen_supported_devices.py
src/: factory.rs  lib.rs  listener.rs  main.rs
src/config/: pools.rs
src/data/: board.rs  device.rs  fan.rs  hashrate.rs  message.rs  miner.rs  mod.rs  pool.rs  serialize.rs
src/data/device/: mod.rs
src/data/device/models/: antminer.rs  avalon.rs  avalonminer.rs  (+6 more)
src/miners/: commands.rs  data.rs  listener.rs  mod.rs  util.rs
src/miners/api/: mod.rs
src/miners/backends/: btminer.rs  mod.rs  traits.rs
src/miners/factory/: hardware.rs  mod.rs  traits.rs
src/python/: data.rs  factory.rs  miner.rs  mod.rs  typing.rs
src/test/: api.rs  mod.rs
src/test/json/: mod.rs
(+210 files in other folders)
