[package]
name = "asic-rs"
version = "0.1.0"
edition = "2024"
license = "LICENSE.txt"

[dependencies]
diqwest = "3.1.0"
futures = "0.3.31"
macaddr = { version = "1.0.1", features = ["serde_std"] }
measurements = { version = "0.11.0", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "gzip"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
async-trait = "0.1.88"
strum = { version = "0.27", features = ["derive"] }
semver = "1.0.26"
anyhow = "1.0.98"
ipnet = "2.11.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
