[package]
name = "asic-rs"
version = "0.1.0"
edition = "2024"
license = "LICENSE.txt"
description = "Simple ASIC management in Rust"

[dependencies]
diqwest = "3.1"
futures = "0.3"
macaddr = { version = "1.0", features = ["serde_std"] }
measurements = { version = "0.11", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
url = "2.5"
async-trait = "0.1"
strum = { version = "0.27", features = ["derive"] }
semver = "1.0"
anyhow = "1.0"
ipnet = "2.11"
rand = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
