[package]
name = "asic-rs-firmwares-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proto MDK firmware implementation for asic-rs"

[lints]
workspace = true

[dependencies]
asic-rs-core.workspace = true
asic-rs-makes-proto.workspace = true

anyhow.workspace = true
async-trait.workspace = true
macaddr.workspace = true
measurements.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

pyo3 = { workspace = true, optional = true }

[features]
python = ["dep:pyo3", "asic-rs-core/python"]
